fix:text wraping

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     appearance: none;
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
    
 }
 
@@ -26,18 +27,6 @@ body{
 
 
 
-.skewedRectangle{
-    position: absolute;
-    width: calc(100vw + 100vw);
-    height: 80vh;
-  
-    transform: translate(-200px,-60vh) rotate(-10deg) ;
-    background-color: var(---backgroundColorHeader);
-    z-index:1;
-   
-    
-
-}
 
 
 .imageWithBio{
@@ -53,9 +42,36 @@ body{
     color:var(--color);
 
     .person{
-        display: flex;
+        font-size: 16px;
+        h1{
+            margin-top: 13px;
+            font-size: 45px;
+        }
+        .descriptionSelf{
+            margin-top: 13px;
+            font-size: 18px;
+
+        }
+        .icons{
+            display: flex;
+            justify-content: end;
+            padding: 12px;
+            gap:12px;
+            svg{
+                width: var(---iconSize);
+                height: var(---iconSize);
+            }
+        }
+       
         img{
             border-radius: var(--roundedEdges);
+
+            
+        }
+        .image{
+            float: left;
+            margin-right: 20px;
+            height: auto;
         }
     }
     
@@ -226,4 +242,100 @@ footer{
         align-items: center;
         gap: 4px;
     }
+}
+
+@media (max-width:1000px) and (min-width:500px) {
+    .projects{
+        grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            gap: 30px;
+    }
+    .content{
+        gap: 30vh;
+    }
+   
+      
+      .name{
+        position: absolute;
+        top: -90px;
+        left:200px
+
+      }
+   
+        body {
+            overflow-x: hidden;
+        }
+
+    footer{
+        img{
+            width: 250px;
+        }
+    }
+
+  
+    .image{
+        height: 200px;
+    }
+
+    .imageOnText{
+        display: flex;
+    }
+    .person{
+       text-wrap: wrap;
+    }
+    
+}
+
+@media (max-width:425px) {
+    .bio{
+        font-size: 16px;
+    }
+    .card{
+        font-size: 14px;
+        padding: 15px;
+    }
+.name {
+        position: absolute;
+        margin-top: 0px;
+        height: 40px;
+    }
+ .imageWithBio {
+             width: 240px;
+    
+ }
+
+  .person {
+      flex-direction: column;
+      gap: 100px
+
+  }
+
+ .projects {
+            grid-template-columns: repeat(1, 310px);
+            grid-template-rows: repeat(6, 1fr);
+            gap: 10px;
+        }
+    
+.content {
+            gap: 30vh;
+    }
+
+    footer{
+        gap:12px;
+        font-size: 14px;
+        flex-direction: column;
+
+    padding: 10px 10px;
+    
+    .Details{
+        text-align: center;
+    }
+        
+    picture,div,p {
+     display: flex;
+     justify-content: center;
+
+    }
+    }
+    
 }
